syntax = "proto3";
package com.ludd.rpc.to;

message RpcMessage {
    string service = 1;
    bytes data = 2;
}

message RpcRequest {
    string service = 1;
    string method = 2;
    bytes arg = 3;
}

message RpcResponse {
    bytes result = 1;
    string error = 2;
    bool hasError = 3;
}

message RequestContext {
    string playerId = 1;
}

message InnerRpcRequest {
    string service = 1;
    string method = 2;
    bytes arg = 3;
    RequestContext context = 4;
}